# ExaMPM

./: .gitignore  CMakeLists.txt  LICENSE  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake
.github/workflows/: CI.yml  Weekly.yml
cmake/: FindCLANG_FORMAT.cmake  FindSilo.cmake
cmake/TPLs/: FindTPLHDF5.cmake
core/: CMakeLists.txt
core/cmake/: Dependencies.cmake
core/src/: .ProblemManager.cc.swp  BoundaryCondition.cc  BoundaryCondition.hh  Box.cc  Box.hh  CMakeLists.txt  Disc.cc  Disc.hh  EulerianAlmansiFiniteStrain.cc  EulerianAlmansiFiniteStrain.hh  FileIO.cc  FileIO.hh  Geometry.cc  Geometry.hh  InfinitesimalStrain.cc  InfinitesimalStrain.hh  LagrangianFiniteStrain.cc  LagrangianFiniteStrain.hh  MaterialModel.hh  Mesh.cc  Mesh.hh  Mesh2d.cc  Mesh2d.hh  NeoHookeanStress.cc  NeoHookeanStress.hh  NewtonianViscousStress.cc  NewtonianViscousStress.hh  Particle.hh  ProblemManager.cc  ProblemManager.hh  Ring.cc  Ring.hh  Sheet.cc  Sheet.hh  Sphere.cc  Sphere.hh  Square.cc  Square.hh  StrainModel.hh  StressModel.hh  (+2 more)
core/test/: CMakeLists.txt  tstBouncingBall.cc  tstDamBreak.cc  tstFileIO.cc  tstGeometry.cc  tstMesh.cc  tstTaylorGreen.cc  tstTensor.cc  tstVortexSheet.cc  tstWaterDroplet.cc  tstWorthingtonJet.cc
examples/: CMakeLists.txt  dam_break.cpp  free_fall.cpp
gtest/: CMakeLists.txt  gtest_main.hh
gtest/cmake/: UtilsTest.cmake
python/: read_particles.py
src/: CMakeLists.txt  ExaMPM_BoundaryConditions.hpp  ExaMPM_DenseLinearAlgebra.hpp  ExaMPM_LoadBalancer.hpp  ExaMPM_Mesh.cpp  ExaMPM_Mesh.hpp  ExaMPM_ParticleCommunication.hpp  ExaMPM_ParticleInit.hpp  ExaMPM_ProblemManager.hpp  ExaMPM_SiloParticleWriter.hpp  ExaMPM_Solver.hpp  ExaMPM_TimeIntegrator.hpp  ExaMPM_TimeStepControl.hpp  ExaMPM_Types.hpp  ExaMPM_VTKDomainWriter.hpp  ExaMPM_VelocityInterpolation.hpp
